--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# nodejs
+**/node_modules/
+
+# vue
+**/vue/build/
+**/assets/scripts/
