--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,75 @@
-version '1.0-SNAPSHOT'
-
-apply plugin: "java"
-apply plugin: 'kotlin'
-apply plugin: "eclipse"
-apply plugin: "war"
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-
-    compile 'com.sun.jersey:jersey-servlet:1.16'
-    compile 'org.glassfish.jersey.ext:jersey-mvc:2.12'
-    compile 'org.glassfish.jersey.core:jersey-server:2.17'
-    compile 'org.glassfish.jersey.core:jersey-common:2.17'
-    compile 'org.glassfish.jersey.ext:jersey-mvc:2.12'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.12'
-    compile 'org.thymeleaf:thymeleaf:2.1.3.RELEASE'
-    compile 'javax:javaee-api:7.0'
-    testCompile "junit:junit:4.11"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-}
 buildscript {
-    ext.kotlin_version = '1.1.2-2'
+    ext.kotlin_version = '1.1.3-2'
+    ext.ktor_version = '0.4.0-alpha-10'
+    ext.squash_version = "0.2.2"
+
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+apply plugin: 'kotlin'
+apply plugin: 'application'
+apply plugin: 'war'
+
+repositories {
+    mavenCentral()
+    jcenter()
+    maven {
+        url 'http://dl.bintray.com/kotlin/kotlinx'
+    }
+    maven {
+        url 'http://dl.bintray.com/kotlin/ktor'
+    }
+    maven { url "https://dl.bintray.com/kotlin/squash" }
+    maven { url "http://dl.bintray.com/kotlin/kotlinx.html" }
+}
+
+dependencies {
+    compile group: 'javax', name: 'javaee-api', version: '7.0'
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    compile "org.jetbrains.ktor:ktor-locations:$ktor_version"
+    compile "org.jetbrains.ktor:ktor-gson:$ktor_version"
+    compile "org.jetbrains.ktor:ktor-jetty:$ktor_version"
+    compile "org.jetbrains.ktor:ktor-netty:$ktor_version"
+    compile "org.jetbrains.ktor:ktor-gson:$ktor_version"
+    compile "org.jetbrains.ktor:ktor-html-builder:$ktor_version"
+    compile "org.ehcache:ehcache:3.0.0.m4"
+
+    compile "org.jetbrains.squash:squash-h2:$squash_version"
+
+    testCompile("org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version")
+    testCompile "org.jetbrains.ktor:ktor-test-host:$ktor_version"
+    testCompile "org.jsoup:jsoup:1.9.1"
+
+    compile "org.jetbrains.ktor:ktor-jetty:$ktor_version"
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+}
+
 sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
+    main.kotlin.srcDirs += 'src/main/kotlin'
+    main.java.srcDirs += 'src/main/java'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
 
 task deploy(dependsOn: war) {
@@ -47,3 +80,5 @@ task deploy(dependsOn: war) {
         }
     }
 }
+
+mainClassName = 'org.jetbrains.ktor.netty.DevelopmentHost'
