--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.2",
+    "glob": "^7.1.2",
     "jquery": "^3.1.0",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.4.2",
