--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -20,6 +20,7 @@
     "webpack": "^3.4.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel": "^6.5.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
