--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -27,6 +27,8 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.13.2",
     "css-loader": "^0.28.4",
+    "rx": "^4.1.0",
+    "rxjs": "^5.4.3",
     "vue-class-component": "^5.0.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^8.5.3",
