--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.1.4'
     ext.ktor_version = '0.4.0-alpha-10'
     ext.squash_version = "0.2.2"
 
