--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
-    ext.kotlin_version = '1.1.4'
+    ext.kotlin_version = '1.1.2'
     ext.ktor_version = '0.4.0-alpha-10'
     ext.squash_version = "0.2.2"
+    ext.domaVersion = '2.16.1'
 
     repositories {
         mavenCentral()
@@ -15,6 +16,18 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 apply plugin: 'war'
+apply plugin: 'kotlin-kapt'
+
+// コンパイルより前にSQLファイルを出力先ディレクトリにコピーするために依存関係を逆転する
+compileJava.dependsOn processResources
+
+// SQLファイルなどリソースファイルの出力先ディレクトリをkaptに伝える
+kapt {
+    arguments {
+        arg("doma.resources.dir", processResources.destinationDir)
+    }
+}
+
 
 repositories {
     mavenCentral()
@@ -51,6 +64,11 @@ dependencies {
 
     compile "org.jetbrains.ktor:ktor-jetty:$ktor_version"
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
+    compile "org.seasar.doma:doma:$domaVersion"
+    kapt "org.seasar.doma:doma:$domaVersion"
+
+    compile 'mysql:mysql-connector-java:5.1.6'
 }
 
 sourceSets {
